<resources>
    <string name="app_name">Gorbachev_wallpapers</string>
    <string name="bot_nav_search">Search</string>
    <string name="bot_nav_fav">Favourites</string>
    <string name="bot_nav_history">History</string>
    <string name="null_img_mes">You have not added any photo to favourites</string>
    <string name="null_queries_mes">You have not added any queries to favourites </string>
    <string name="is_online_mes">You have no internet connection</string>
    <string name="null_history_mes">You have not made any query</string>
    <string name="loader_title">Wallpapers</string>
    <string name="portfolio_btn">Portfolio</string>
    <string name="info_card_date_title">Date</string>
    <string name="info_card_color_title">Color</string>
    <string name="info_card_size_title">Size</string>
    <string name="image_loading_no_internet_mes">You have no internet connection</string>
    <string name="image_loading_no_internet_btn_text">Retry</string>
    <string name="wp_to_work_space_btn_text">Set as desktop wallpaper</string>
    <string name="wp_to_block_screen_btn_text">Set as block screen wallpapers</string>
    <string name="add_to_favourites_btn_text">Save to favourites</string>
    <string name="image_details_menu_share">Share</string>
    <string name="image_details_menu_options">Options</string>
    <string name="image_details_menu_info">Info</string>
    <string name="query_time_less_five_min">" less than 5 min ago"</string>
    <string name="query_time_less_hour">" less than hour ago"</string>
    <string name="query_time_count_hours">" hours ago"</string>
    <string name="successful_mes_work_space_wallpaper">The desktop wallpaper has been successfully installed!</string>
    <string name="device_error_mes">Wrong device version!</string>
    <string name="successful_mes_block_screen_wallpaper">The block screen wallpapers has been successfully installed!</string>
    <string name="permission_refused_mes">permission refused</string>
    <string name="permission_granted_mes">permission granted</string>
    <string name="no_internet_connection_mes">You have no internet connection!</string>
</resources>