<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/details_menu_share"
        android:background="@drawable/list_selector_background"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/image_details_menu_share" />

    <item
        android:id="@+id/details_menu_settings"
        android:background="@drawable/list_selector_background"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/image_details_menu_options" />
    <item
        android:id="@+id/details_menu_info"
        android:background="@drawable/list_selector_background"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/image_details_menu_info" />
</menu>