<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search_fr"
        android:background="@drawable/list_selector_background"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:padding="10dp"
        android:title="@string/bot_nav_search" />

    <item
        android:id="@+id/favourites_fr"
        android:background="@drawable/list_selector_background"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:padding="10dp"
        android:title="@string/bot_nav_fav" />
    <item
        android:id="@+id/history_fr"
        android:background="@drawable/list_selector_background"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_history_24"
        android:padding="10dp"
        android:title="@string/bot_nav_history" />
</menu>