<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tuneMenuContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/wallpaperToWorkSpaceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".2"
                android:src="@drawable/ic_wallpaper" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".7"
                android:text="@string/wp_to_work_space_btn_text"
                android:textColor="@color/text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wallpaperToBlockScreenBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".2"
                android:src="@drawable/ic_wallpaper" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".7"
                android:text="@string/wp_to_block_screen_btn_text"
                android:textColor="@color/text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addToFavouritesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".2"
                android:src="@drawable/ic_baseline_favorite_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".7"
                android:text="@string/add_to_favourites_btn_text"
                android:textColor="@color/text" />

        </LinearLayout>

    </LinearLayout>
</layout>